--- a/src/views/404.html
+++ b/src/views/404.html
@@ -65,7 +65,7 @@
             The page or content you were looking for could not be found.
         </p>
         <br>
-        <center> <button class="btn btn-neutral px-10">Go Home</button> </center>
+        <center> <a href="https://myshare.haydar.dev"><button class="btn btn-neutral px-10">Go Home</button> </a></center>
       </div>
     </div>
   </div>
